@@ -110,7 +110,7 @@ GIFLIB_VER=5.1.4
 YASM_VER=1.3.0
 
 LIBGPG_ERROR_VER=1.36
-LIBGCRYPT_VER=1.8.4
+LIBGCRYPT_VER=1.8.5
 
 LIBUUID_VER=2.33.2
 LIBUUID_SUBVER=2.33
