@@ -122,6 +122,7 @@ bcf5334e7da352c45de6aec5d2084ce9a1d30029ff4a4a5da13f1848874759d1  libgcrypt-1.5.
 b9b85eba0793ea3e6e66b896eb031fa05e1a4517277cc9ab10816b359254cd9a  libgcrypt-1.7.7.tar.bz2
 7a2875f8b1ae0301732e878c0cca2c9664ff09ef71408f085c50e332656a78b3  libgcrypt-1.8.1.tar.bz2
 f638143a0672628fde0cad745e9b14deb85dffb175709cacc1f4fe24b93f2227  libgcrypt-1.8.4.tar.bz2
+3b4a2a94cb637eff5bdebbcaf46f4d95c4f25206f459809339cdada0eb577ac3  libgcrypt-1.8.5.tar.bz2
 5f71a3f7da2d0b5ea241186848e33e36714952d40d75d98278c4f184b79915f4  libgpg-error-1.4.tar.bz2
 520629b4568b5c29b1991c8ffc267c8bdee5f223c7333c42a651b56f9b1c5431  libgpg-error-1.10.tar.bz2
 cafc9ed6a87c53a35175d5a1220a96ca386696eef2fa059cc0306211f246e55f  libgpg-error-1.12.tar.bz2
@@ -258,6 +259,7 @@ ec3f5c9714ba0fd45cb4e087301eb1336c317e0d20b575a125050470e8089e4d  openssl-1.0.2o
 5744cfcbcec2b1b48629f7354203bc1e5e9b5466998bbccc5b5fcde3b18eb684  openssl-1.0.2q.tar.gz
 ae51d08bba8a83958e894946f15303ff894d75c2b8bbd44a852b64e3fe11d0d6  openssl-1.0.2r.tar.gz
 14cb464efe7ac6b54799b34456bd69558a749a4931ecfd9cf9f71d7881cac7bc  openssl-1.0.2t.tar.gz
+1e3a91bc1f9dfce01af26026f856e064eab4c8ee0a8f457b5ae30b40b8b711f2  openssl-1.1.1d.tar.gz
 5570dc5b62f6f9e28954f5cbd7946a9b35767c06b375eff1c4cc40561e7f1655  osgearth-2.8.tar.gz
 22aeef42bb700c1e669d9ba57ce4155c0668caf86cc738750a6b9d34c1eaf2a4  osgearth-2.9.tar.gz
 57045120a26a0dbaf58e787df872fc5bf6573e91d7872648afddc6fdd856e131  pciutils-3.1.7.tar.xz
